<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/moonbackground">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalize_being_a_big_ol_sleepyhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="46dp"
        android:textSize="45sp"
        android:textColor="@color/moonwhite"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/crescent"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/moonlogo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/linear"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/logo_of_a_moon_with_white_noise_coming_out" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crescent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/wavetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_noise"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/moonwhite"
            android:layout_gravity="center"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/whiteslider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wavetext"
            android:valueFrom="0.0"
            android:valueTo="0.6"
            android:value="0.3"
            android:contentDescription="@string/white_noise_slider_control"
            app:labelBehavior="gone"
            app:trackColorActive="@color/moonwhite"
            app:trackColorInactive="@color/moonyellow"
            app:thumbColor="@color/moonwhite" />

        <TextView
            android:id="@+id/browntext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/whiteslider"
            android:textColor="@color/moonwhite"
            android:text="@string/brown_noise"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/brownslider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:valueFrom="0.0"
            android:valueTo="0.8"
            android:value="0.4"
            android:contentDescription="@string/brown_noise_slider_control"
            app:layout_constraintTop_toBottomOf="@id/browntext"
            app:labelBehavior="gone"
            app:trackColorActive="@color/moonwhite"
            app:trackColorInactive="@color/moonyellow"
            app:thumbColor="@color/moonwhite"/>

        <TextView
            android:id="@+id/pinktext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/moonwhite"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/brownslider"
            android:text="@string/pink_noise"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/pinkslider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="1.0"
            android:value="0.5"
            android:contentDescription="@string/pink_noise_slider_control"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pinktext"
            app:labelBehavior="gone"
            app:trackColorActive="@color/moonwhite"
            app:trackColorInactive="@color/moonyellow"
            app:thumbColor="@color/moonwhite"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/play"
        android:layout_marginBottom="30dp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/play"
        android:contentDescription="@string/play_button" />


</androidx.constraintlayout.widget.ConstraintLayout>